<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <include
        layout="@layout/actionbar"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/activity_setting_label_api"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:maxLines="1"
                android:id="@+id/activity_setting_api"
                android:background="@drawable/activity_setting_custom_edit_text"
                android:hint="@string/activity_setting_api"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:id="@+id/activity_setting_sample_api"
                android:text="@string/activity_setting_label_sample_api"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/activity_setting_label_video"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:id="@+id/activity_setting_video_path_layout"
                android:layout_height="?actionBarSize">

                <com.jby.pricechecker.others.SquareHeightLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:src="@drawable/mp4"
                        android:contentDescription="@string/app_name"
                        android:padding="10dp"
                        android:id="@+id/activity_setting_file_type"
                        android:layout_height="match_parent" />

                </com.jby.pricechecker.others.SquareHeightLinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:id="@+id/activity_setting_video_name"
                    android:text="testing.mp4"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/activity_login_custom_button"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:id="@+id/activity_setting_select_video_button"
                android:text="@string/activity_setting_button_select_video"/>

            <com.jby.pricechecker.others.ExpandableHeightListView
                android:layout_width="match_parent"
                android:id="@+id/activity_setting_gallery_list"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:id="@+id/activity_setting_video_explain"
                android:text="@string/activity_setting_video_explaination"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/activity_setting_label_shut_down_time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:text="@string/activity_setting_label_shut_down"
                android:background="@drawable/activity_setting_custom_edit_text"
                android:id="@+id/activity_setting_shut_down_timer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:id="@+id/activity_setting_shut_down_timer_explaination"
                android:text="@string/activity_setting_label_shut_down_timer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/activity_setting_version" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>