<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/activity_login_username_layout"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:inputType="textEmailAddress"
            android:id="@+id/activity_login_username"
            android:hint="@string/activity_login_hint_username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_below="@id/activity_login_username_layout"
        android:id="@+id/activity_login_password_layout"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:inputType="textPassword"
            android:id="@+id/activity_login_password"
            android:hint="@string/activity_login_hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/activity_login_custom_button"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:layout_below="@id/activity_login_password_layout"
        android:id="@+id/activity_login_login_button"
        android:text="@string/activity_login_login_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_login_button"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:text="@string/activity_login_label_forgot_password"/>

</RelativeLayout>