<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeUserDetailActivity">

    <include
        layout="@layout/actionbar"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/activity_change_user_detail_new_username_layout"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:inputType="textEmailAddress"
            android:id="@+id/activity_change_user_detail_new_username"
            android:hint="@string/activity_change_user_detail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/activity_login_password_layout"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:inputType="textPassword"
            android:id="@+id/activity_change_user_detail_new_password"
            android:hint="@string/activity_change_user_detail_hint_new_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/activity_login_confirm_password_layout"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:inputType="textPassword"
            android:id="@+id/activity_change_user_detail_confirm_password"
            android:hint="@string/activity_change_user_detail_hint_confirm_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/activity_change_user_detail_label"/>

</LinearLayout>