<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:gravity="center"
    android:padding="40dp"
    android:background="@color/transparent_black"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/activity_login_custom_edit_text"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:textColor="@color/black"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/select_from_gallery_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/line_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"
            android:id="@+id/select_from_gallery_picture"
            android:text="@string/select_from_gallery_label_picture"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/line_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:id="@+id/select_from_gallery_video"
            android:text="@string/select_from_label_video"/>

    </LinearLayout>

</LinearLayout>
