<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    android:gravity="center"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display_product_progress_bar"
        android:indeterminateBehavior="repeat"
        android:indeterminateTintMode="src_in"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/green"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/display_product_dialog_scan_result"
        android:focusable="true"
        android:padding="5dp"
        android:clickable="false"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:inputType="textNoSuggestions"
        android:cursorVisible="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:visibility="gone"
        android:id="@+id/display_product_dialog_parent_layout"
        android:background="@color/orange"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@drawable/activity_login_custom_edit_text"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:background="@color/white"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bottle 500ML"
                        android:textColor="@color/grey"
                        android:textSize="30sp"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:id="@+id/display_product_dialog_description_detail" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/display_product_dialog_image"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

                <View
                    android:layout_width="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="match_parent"
                    android:background="@color/line_black"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            android:text="@string/display_product_dialog_label_price"
                            android:textColor="@color/grey"
                            android:textSize="25sp"
                            android:layout_centerInParent="true"
                            android:layout_alignParentTop="true"
                            android:gravity="center_vertical"
                            android:padding="5dp"
                            android:textStyle="italic|bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="RM 19.99"
                            android:gravity="center"
                            android:layout_below="@id/display_product_dialog_price"
                            android:textColor="@color/orange"
                            android:textSize="120sp"
                            android:padding="5dp"
                            android:layout_centerInParent="true"
                            android:textStyle="bold"
                            android:id="@+id/display_product_dialog_price" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Item: Bottle"
                        android:textColor="@color/grey"
                        android:textSize="30sp"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:id="@+id/display_product_dialog_barcode" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SKU: 102143"
                        android:textColor="@color/grey"
                        android:textSize="30sp"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:id="@+id/display_product_dialog_item_code" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_weight="0.2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/display_product_dialog_custom_text_view"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:textColor="@color/red"
                        android:text="@string/display_product_dialog_label_remark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:id="@+id/display_product_dialog_remark_promotion"
                        android:textColor="@color/grey"
                        android:text="This is a promotion remark"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
